# buggybase

./: Dockerfile  LICENSE  MANIFEST.in  README.rst  Vagrantfile  docker-compose.yml  setup.cfg
buggybase/: __init__.py  base.py
buggybase/templates/: index.html
