[metadata]
name = buggybase
version = attr: buggybase.__version__
url = https://github.com/8ayac/buggybase
license_file = LICENSE
author = 8ayac
author_email = 8ayac@wearehackerone.com
include_package_data = True
description =
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
zip_safe = False
include_package_data = true
install_requires =
    Flask-Bootstrap4
    Flask
python_requires = >=3.8.0
